@@ -25,7 +25,7 @@
 <tr><th class="docinfo-name">Contact:</th>
 <td><a class="first last reference external" href="mailto:rasky&#64;develer.com">rasky&#64;develer.com</a></td></tr>
 <tr><th class="docinfo-name">Revision:</th>
-<td>1658</td></tr>
+<td>1688</td></tr>
 <tr class="field"><th class="docinfo-name">Source URL:</th><td class="field-body">$HeadURL: <a class="reference external" href="https://src.develer.com/svnoss/pyinstaller/trunk/doc/source/Manual.rst">https://src.develer.com/svnoss/pyinstaller/trunk/doc/source/Manual.rst</a> $</td>
 </tr>
 <tr><th class="docinfo-name">Copyright:</th>
@@ -170,14 +170,7 @@ or shared library.</dd>
 </div>
 <div class="section" id="mac-os-x">
 <h2><a class="toc-backref" href="#id4">Mac OS X</a></h2>
-<dl class="docutils">
-<dt><a class="reference external" href="http://developer.apple.com/xcode">Xcode</a></dt>
-<dd>is a suite of tools for developing software for Mac OS X. It can be also
-installed from your <tt class="docutils literal">Mac OS X Install DVD</tt>. It is not necessary to
-install the version 4 of Xcode. PyInstaller depends on <tt class="docutils literal">otool</tt> which is
-installed together with Xcode. <tt class="docutils literal">otool</tt> displays information of object
-files or libraries.</dd>
-</dl>
+<p>No dependency on other modules or software.</p>
 <p><a class="reference internal" href="#pyinstaller-manual"><cite>Back to Top</cite></a></p>
 </div>
 </div>
@@ -1946,7 +1939,7 @@ were easy to implement.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="source/Manual.rst">View document source</a>.
-Generated on: 2011-10-16 19:49 UTC.
+Generated on: 2011-10-19 23:23 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
