@@ -13,6 +13,7 @@ Changes since PyInstaller 1.5
  + Added option --log-level to all scripts to adjust level of output
    (thanks to Hartmut Goebel).
  + rthooks.dat moved to support/rthooks.dat
+ * Drop dependency on otool from Xcode on Mac OSX.
  * Removed compatibility code for old platforms (dos, os2, MacOS 9).
  * Fix missing qt_menu.nib in dist directory on Mac OSX when using PyQt4.
  * Use Python logging system for message output (thanks to Hartmut
